--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.0.2",
     "ember": "0.9.8",
     "ember-cli": "1.13.8",
+    "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
