--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
     "jquery": "^2.1.4",
-    "loader.js": "ember-cli/loader.js#3.2.0",
+    "loader.js": "^3.5.0",
     "qunit": "~1.18.0",
     "material-design-lite-src": "google/material-design-lite#master",
     "material-design-icons": "~2.0.0",
@@ -37,6 +37,6 @@
     "sinonjs": "~1.14.1"
   },
   "resolutions": {
-    "loader.js": "3.2.1"
+    "loader.js": "^3.5.0"
   }
 }
