--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,14 @@
 {
-  "name": "console",
+  "name": "stress-app",
   "dependencies": {
-    "ember": "1.13.6",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.13.7",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "0.4.9",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.18",
-    "jquery": "^2.1.4",
-    "loader.js": "^3.5.0",
-    "qunit": "~1.18.0",
+    "ember": "~2.4.1",
+    "ember-cli-shims": "0.1.0",
+    "ember-cli-test-loader": "0.2.2",
+    "ember-qunit-notifications": "0.1.0",
     "material-design-lite-src": "google/material-design-lite#master",
     "material-design-icons": "~2.0.0",
     "jquery-ui": "1.11.4",
     "jquery-file-upload": "9.5.7",
-    "ic-ajax": "~0.3.0",
     "pusher": "~2.2.0",
     "date.format": "1.2.3",
     "momentjs": "~2.10.6",
@@ -37,6 +29,6 @@
     "sinonjs": "~1.14.1"
   },
   "resolutions": {
-    "loader.js": "^3.5.0"
+    "ember": "~2.4.1"
   }
 }
