--- a/package.json
+++ b/package.json
@@ -19,29 +19,31 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.1.2",
-    "ember-cli": "*",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "^2.4.1",
     "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.3",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-htmlbars": "^1.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
-    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-jquery-ui": "0.0.20",
-    "ember-cli-qunit": "^1.0.1",
-    "ember-cli-release": "0.2.3",
+    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-release": "0.2.8",
     "ember-cli-sass": "^5.2.0",
-    "ember-cli-sri": "^1.0.3",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "2.0.0",
-    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-data": "~2.4.0",
+    "ember-disable-proxy-controllers": "^1.0.1",
     "ember-document-title": "1.13.0",
     "ember-export-application-global": "^1.0.4",
     "ember-inflector": "~1.9.1",
     "ember-intl": "^2.0.0",
-    "install": "0.1.8"
+    "ember-load-initializers": "^0.5.0",
+    "ember-resolver": "^2.0.3",
+    "install": "0.1.8",
+    "loader.js": "^4.0.0"
   }
 }
