--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
     "ember-cli": "^2.4.1",
-    "ember-cli-autoprefixer": "^0.3.0",
+    "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.2.0",
@@ -32,15 +32,15 @@
     "ember-cli-jquery-ui": "0.0.20",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "^5.2.0",
+    "ember-cli-sass": "^5.3.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.4.0",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-document-title": "1.13.0",
+    "ember-document-title": "^2.0.3",
     "ember-export-application-global": "^1.0.4",
     "ember-inflector": "~1.9.1",
-    "ember-intl": "^2.0.0",
+    "ember-intl": "^2.3.1",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "install": "0.1.8",
