--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
-    "ember-cli": "^2.4.1",
+    "ember-cli": "^2.6.2",
     "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars": "^1.0.8",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-jquery-ui": "0.0.20",
     "ember-cli-qunit": "^1.2.1",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sass": "^5.3.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "~2.4.0",
+    "ember-data": "^2.6.1",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-document-title": "^2.0.3",
     "ember-export-application-global": "^1.0.4",
