--- a/package.json
+++ b/package.json
@@ -1,49 +1,70 @@
 {
   "name": "stress-app",
   "version": "0.1.0",
-  "description": "Small description for console goes here",
   "private": true,
+  "description": "Small description for console goes here",
+  "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
     "test": "ember test"
   },
   "repository": "",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "ember-ajax": "0.7.1",
-    "ember-cli": "^2.6.2",
-    "ember-cli-autoprefixer": "^0.6.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.8",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-jquery-ui": "0.0.20",
-    "ember-cli-qunit": "^1.2.1",
-    "ember-cli-release": "1.0.0-beta.2",
-    "ember-cli-sass": "^5.3.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.6.1",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-document-title": "^2.0.3",
-    "ember-export-application-global": "^1.0.4",
-    "ember-inflector": "~1.9.1",
+    "@ember/optional-features": "^1.1.0",
+    "@glimmer/component": "^1.0.0",
+    "babel-eslint": "^10.0.3",
+    "broccoli-asset-rev": "^3.0.0",
+    "codemirror": "^5.51.0",
+    "ember-auto-import": "^1.5.3",
+    "ember-cli": "~3.15.2",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-autoprefixer": "^0.8.1",
+    "ember-cli-babel": "^7.13.0",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-htmlbars": "^4.2.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-sass": "^10.0.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-concurrency": "^1.1.5",
+    "ember-concurrency-decorators": "^1.0.0",
+    "ember-cp-validations": "^4.0.0-beta.10",
+    "ember-data": "~3.15.0",
+    "ember-export-application-global": "^2.0.1",
+    "ember-fetch": "^7.0.0",
+    "ember-inflector": "^3.0.1",
     "ember-intl": "^2.3.1",
-    "ember-load-initializers": "^0.5.0",
-    "ember-resolver": "^2.0.3",
+    "ember-load-initializers": "^2.1.1",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-page-title": "^5.2.1",
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^7.0.0",
+    "ember-source": "~3.15.0",
+    "eslint-plugin-ember": "^7.7.1",
+    "eslint-plugin-node": "^10.0.0",
     "install": "0.1.8",
-    "loader.js": "^4.0.0"
-  }
+    "loader.js": "^4.7.0",
+    "lodash": "^4.17.15",
+    "material-design-icons": "^3.0.1",
+    "material-design-lite": "^1.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "node-sass": "^4.13.1",
+    "qunit-dom": "^0.9.2",
+    "sinon": "^8.1.1"
+  },
+  "engines": {
+    "node": "8.* || >= 10.*"
+  },
+  "ember": {
+    "edition": "octane"
+  },
+  "license": "MIT"
 }
